# stgym

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  allocate-big-array-in-torch.py  analyze_mlflow_experiment.py  benchmark_matmul_precision.py  clustering-demo.py  get-data-size-in-cuda.py  get_pos_maxpsan.py  graph-clf-demo.py  mem-profile-resnet-demo.py  mem-profiling-test.py  memory-profile-with-raw-torch-training.py  memory-profile-with-torch-lightening.py  node-clf-demo.py  obtain_task_repr.py  print_ds_info.py  pyproject.toml  rct-experiment-result-analysis.ipynb  rct_experiment_analysis.py  requirements-gpu.txt  requirements.txt  run_experiment_by_yaml.py  run_rct.py  run_task_repr.py  test_ray_gpu_allocation.py  test_total_mem.py  train-demo.py
.claude/: settings.json
conf/: config.yaml  obtain_task_repr_graph_clf.yaml  obtain_task_repr_node_clf.yaml  task_repr_config.yaml
configs/: mlflow.yaml  resource-4gpu.yaml  resource.yaml  test.yaml
exp-reports/: float32_matmul_benchmark_report.md
sandbox/: Dockerfile  README.md  claude.sh  docker-compose.yml  entrypoint.sh  otel-collector-config.yaml  run.sh  test-sandbox.sh
scripts/: analyze_concurrency.py  analyze_mlflow_run_time.py  batch_precompute_dataset_stats.py  benchmark-cpu.sh  benchmark.sh  benchmark_omp_threads.py  benchmark_pin_memory.py  benchmark_transform_vs_pretransform.py  cost-report.sh  design-dimension-sweep-all.sh  ensure_data_processed.py  precompute_dataset_stats.py  preprocess_datasets.py  reprocess-dataset-local.sh  reprocess-dataset-remote.sh  rsync-data-from-remote.sh  rsync-data.sh  rsync-processed-data.sh  run_profiling.sh  setup-mlflow-ssh-tunnel.sh  setup-sandbox-plugins.sh  start-mlflow-server.sh  stress_test_load_gate.py  stress_test_mouse_kidney.py  sweep_status.py  test-design-dimension-sweep.sh  test_dynamic_resource_allocation.sh  test_effect_of_concurrency.sh  test_on_cpu.sh  test_on_gpu.sh  verify_gpu_free.py
stgym/: activation.py  cache.py  callbacks.py  config_schema.py  data.py  global_pooling.py  layers.py  loss.py  mem_utils.py  model.py  mp.py  optimizer.py  pooling.py  post_mp.py  rct_analysis.py  rct_utils.py  sparse_mincut.py  task_repr.py  tl_model.py  train.py  transforms.py  types.py  utils.py
tests/: conftest.py  mock_mlflow.py  test_cache.py  test_config_schema.py  test_layers.py  test_loss.py  test_marimo_notebook.py  test_mem_utils.py  (+13 more)
(+280 files in other folders)
